# courierx-api

./: .env.backup  .env.example  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
examples/: gen_api_key.rs
migrations/: 0001_initial.sql  0002_emails_updated_at.sql  0003_users.sql  0004_workspace_members.sql  0005_api_keys_revoked.sql
src/: auth.rs  config.rs  db.rs  error.rs  main.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/routes/: api_keys.rs  auth.rs  emails.rs  health.rs  mod.rs
